Removes call to deprecated constructor.